apps/base/underwater/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: underwater
  labels:
    environment: dev
    name: underwater
