apps/base/underwater/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecr-app-underwater
  namespace: underwater
spec:
  selector:
    app: octopus-underwater-app
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  type: ClusterIP
