apps/base/underwater/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: underwater-ingress
  namespace: underwater
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ecr-app-underwater
                port:
                  number: 80
